# POOL

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  GITHUB_WHITELIST.txt  LICENSE  MAINTAINERS  NOTICE  README.md  ROADMAP.md  SECURITY-PLAN.md  fly.toml  install-worker.sh  install.ps1  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build-worker-exe.yml  ci.yml
.pyinstaller-hooks/: hook-llama_cpp.py  plan_b_rename_llama_cpp.ps1
docker/: .env.example  DOCKER_HUB_PUBLISH.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: CONNECT.md  GOVERNANCE.md  MCP_MEMORY_SERVER.md  NEED_TO_KNOW_ARCHITECTURE.md  PLAN_1_0_0.md  POOL_OPERATOR_OBLIGATIONS.md  RUNBOOK_1_0_0_MIGRATION.md
docs/architecture/en/: index.html  layer-atome.html  layer-economie.html  layer-federation.html  layer-pool.html
docs/architecture/fr/: index.html  layer-atome.html  layer-economie.html  layer-federation.html  layer-pool.html
iamine/: __init__.py  __main__.py  admin.py  benchmark.py  config.py  db.py  engine.py  index.html  install.sh  mcp_server.py  memory.py  models.py  molecule.py  pipeline.py  pool.py  pool_discovery.py  proxy.py  router.py  settings.py  tool_parser.py  wallet.py  worker.py
iamine/cli/: federation.py
iamine/core/: __init__.py  accounts.py  agent_memory.py  agent_memory_phase2.py  assignment.py  assist.py  checker.py  compaction.py  credits.py  federation.py  federation_admin.py  federation_disputes.py  federation_heartbeat.py  federation_merkle.py  federation_metrics.py  federation_replication.py  federation_settlement.py  forwarding.py  heartbeat.py  memory_replication.py  pool_status.py  recruitment.py  release_signing.py  revenue.py  routing_embeddings.py  routing_heuristic.py  routing_llm_classify.py  slashing.py  startup.py  types.py  utils.py
iamine/plugins/: __init__.py
iamine/routes/: __init__.py  admin.py  anthropic.py  auth.py  conversations.py  dev.py  federation.py  federation_admin_messaging.py  inference.py  jobs.py  memory.py  red.py  static.py  status.py  websocket.py
iamine/static/: ARCHITECTURE.md  admin.html  admin_federation.js  admin_molecule.html  admin_pool.html  demo.html  demo_en.html  fonts.css  index.html  index_app.html  index_v2.html  legal.html  mobile-app.html  robots.txt  sitemap.xml  sitemap_index.xml  whitepaper-fr.html
iamine/static/OLD/: whitepaper-en.html
iamine/static/docs/: CLAUDE_VPS_RESTORE.md  RUNBOOK_POOL_BOOTSTRAP.md  api-browser.html  connect.html  docker-compose.yml  federation.html  (+4 more)
iamine/templates/: opencode_init.md
migrations/: 000_schema_version.sql  001_initial_schema.sql  002_extensions.sql  003_memory_enabled.sql  004_checker_columns.sql  005_pending_jobs.sql  006_user_memories.sql  007_federation.sql  008_m10_scaffold.sql  009_slashing_scaffold.sql  010_disputes_scaffold.sql  011_replication_scaffold.sql  012_account_replication_log.sql  013_accounts_missing_columns.sql  014_revenue_ledger_unique_origin_job.sql  015_worker_wallet_snapshots.sql  016_email_verification.sql  017_recruitment.sql  018_m13_agent_memory.sql  019_m13_phase2_semantic.sql  020_m11_5_replication.sql  021_admin_users.sql  022_molecule_events.sql  023_federation_admin_requests.sql  024_federation_admin_split_flags.sql  025_smart_routing_instrumentation.sql  026_memory_enabled_default_true.sql  027_sec_pub_08_account_isolation.sql  028_sec_pub_08_rekey_memories.sql  029_rgpd_jobs_fk_on_delete_set_null.sql  030_agent_memory_ivfflat_indexes.sql
scripts/: auto-update.sh  backup-claude-memory.bat  backup-claude-memory.sh  build_release.sh  cleanup-snapshots.sh  migrate-vps.sh  notify.sh  pull-vps-backup.service  pull-vps-backup.sh  pull-vps-backup.timer  rollback.sh  sign_release.py  snapshot.sh  sync-public.sh  verify-system.sh  vps-self-backup.service  vps-self-backup.sh  vps-self-backup.timer
tests/: route_registry_snapshot.txt  test_client_ip.py  test_compaction_guards.py  test_core_utils.py  test_federation_crypto.py  test_federation_nonce.py  test_merkle.py  test_p0_security.py  test_participation_link.py  test_rgpd_account_deletion.py  test_route_registry.py  test_routing_floor.py  test_routing_heuristic.py
tools/pypi-name-reservation/: README.md  iamine_ai_notice.py  pyproject.toml
