[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iamine-ai"
version = "0.2.86"
description = "IAMINE — Distributed AI inference network"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "huggingface-hub>=1.0.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.0",
    "argon2-cffi>=21.0.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
iamine = "iamine.__main__:main"

[tool.setuptools.packages.find]
include = ["iamine*"]

[tool.setuptools.package-data]
iamine = [
    "*.ico",
    "static/*.html",
    "static/*.js",
    "static/*.css",
    "static/*.png",
    "static/*.svg",
]

# Embed migrations/ dir at the repo root as data_files so pip install
# places them at a predictable location discoverable by db.py at runtime.
# NOTE: setuptools discovers relative paths from the wheel's data/ prefix.
[tool.setuptools.data-files]
"iamine-migrations" = ["migrations/*.sql"]
