[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iamine-ai"
version = "1.0.3"
description = "IAMINE — Distributed AI inference network"
readme = "CLAUDE.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
dependencies = [
    "llama-cpp-python>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "huggingface-hub>=1.0.0,<2",
    "cryptography>=41.0.0",
    "passlib>=1.7.0",
    "argon2-cffi>=21.0.0",
    "asyncpg>=0.29.0",
]


[project.optional-dependencies]
# Pool with Smart Routing Phase 3 (KNN pgvector embeddings)
# Install: pip install iamine-ai[pool]
pool = [
    "sentence-transformers>=3.0.0",
]
# Outils de test (CI + dev local). Install: pip install iamine-ai[test]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
iamine = "iamine.__main__:main"

[tool.setuptools.packages.find]
include = ["iamine*"]

[tool.setuptools.package-data]
iamine = [
    "*.ico",
    # Fichiers statiques au premier niveau (page web + manifestes SEO)
    "static/*.html",
    "static/*.js",
    "static/*.css",
    "static/*.png",
    "static/*.svg",
    "static/*.ico",
    "static/*.txt",
    "static/*.xml",
    "static/*.md",
    # Sous-dossiers : pages onboarding/docs, polices, libs JS.
    # Sans ces globs, ils sont absents du wheel/Docker -> 404 sur tout pool
    # installe via pip/Docker (audit bout-en-bout 2026-06-22, item onboarding).
    "static/docs/*",
    "static/fonts/*",
    "static/lib/*",
    # Filet recursif (setuptools>=68) pour tout futur sous-dossier de static/.
    "static/**/*",
]

# Embed migrations/ dir at the repo root as data_files so pip install
# places them at a predictable location discoverable by db.py at runtime.
# NOTE: setuptools discovers relative paths from the wheel's data/ prefix.
[tool.setuptools.data-files]
"iamine-migrations" = ["migrations/*.sql"]

[tool.pytest.ini_options]
# Rend la suite reproductible chez un contributeur/CI (avant : dependait du mode
# pytest-asyncio installe localement). Audit 2026-06-22, dimension tests/CI.
asyncio_mode = "auto"
testpaths = ["tests"]
